@startuml

title __PREVIEW's Class Diagram__\n

  namespace com.aaron.justlike {
    namespace main {
      namespace preview {
        interface com.aaron.justlike.main.preview.IPreviewCommunicable {
            {abstract} + onTap()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace main {
      namespace preview {
        interface com.aaron.justlike.main.preview.IPreviewContract {
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace main {
      namespace preview {
        interface com.aaron.justlike.main.preview.IPreviewContract.P {
            {abstract} + detachView()
            {abstract} + requestImageInfo()
            {abstract} + requestTitle()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace main {
      namespace preview {
        interface com.aaron.justlike.main.preview.IPreviewContract.V {
            {abstract} + attachPresenter()
            {abstract} + onShowTitle()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace main {
      namespace preview {
        class com.aaron.justlike.main.preview.PreviewActivity {
            {static} + DELETE_EVENT : int
            {static} + DELET_EVENT : int
            {static} - CROP_TYPE : String[]
            {static} - FIT_SCREEN : String
            {static} - FREE_CROP : String
            - mBottomBar : LinearLayout
            - mColorPrimary : int
            - mEventType : int
            - mImageList : List<Image>
            - mPosition : int
            - mToolbar : Toolbar
            - mTopBar : FrameLayout
            - mViewPager : ViewPager
            + attachPresenter()
            + onBackPressed()
            + onPreviewEvent()
            + onShowTitle()
            + onSupportNavigateUp()
            + onTap()
            + onWindowFocusChanged()
            # onActivityResult()
            # onCreate()
            # onDestroy()
            - initImageInfo()
            - initToolbar()
            - initUcropTheme()
            - initView()
            - initViewPager()
            - openImageCrop()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace main {
      namespace preview {
        class com.aaron.justlike.main.preview.PreviewAdapter {
            - mList : List<Image>
            - mPosition : int
            + destroyItem()
            + getCount()
            + getItemPosition()
            + instantiateItem()
            + isViewFromObject()
            ~ PreviewAdapter()
        }
      }
    }
  }
  

  namespace com.aaron.justlike {
    namespace main {
      namespace preview {
        class com.aaron.justlike.main.preview.PreviewPresenter {
            + detachView()
            + requestImageInfo()
            + requestTitle()
            ~ PreviewPresenter()
        }
      }
    }
  }
  

  com.aaron.justlike.main.preview.IPreviewContract +-down- com.aaron.justlike.main.preview.IPreviewContract.P
  com.aaron.justlike.main.preview.IPreviewContract +-down- com.aaron.justlike.main.preview.IPreviewContract.V
  com.aaron.justlike.main.preview.PreviewActivity .up.|> com.aaron.justlike.main.preview.IPreviewCommunicable
  com.aaron.justlike.main.preview.PreviewActivity .up.|> com.aaron.justlike.main.preview.IPreviewContract.V
  com.aaron.justlike.main.preview.PreviewActivity -up-|> com.aaron.justlike.common.CommonActivity
  com.aaron.justlike.main.preview.PreviewActivity o-- com.aaron.justlike.main.preview.IPreviewContract.P : mPresenter
  com.aaron.justlike.main.preview.PreviewAdapter -up-|> androidx.viewpager.widget.PagerAdapter
  com.aaron.justlike.main.preview.PreviewPresenter .up.|> com.aaron.justlike.main.preview.IPreviewContract.P
  com.aaron.justlike.main.preview.PreviewPresenter o-- com.aaron.justlike.main.preview.IPreviewContract.V : mView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
